--- a/css/dizzy_content.css
+++ b/css/dizzy_content.css
@@ -15,3 +15,19 @@ body
 
 
 /* CLASSES */
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.underline {
+  border-bottom: 1px solid #000;
+}
